# nodeselector-notify

./: .envrc.sample  Cargo.toml  Dockerfile  Justfile
k8s/: manifests.yaml
src/: main.rs
