[package]
name = "nodeselector-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0", features = ["runtime", "client", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
